# bill-reader

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/helpers/: config.py  extract_pdf_data.py
app/routers/: reader.py
