[tool.poetry]
name = "bill-reader"
version = "0.1.4"
description = "Microserviço da FERCEN para leitura de contas de energia."
license = "GPL-3.0-only"
authors = ["João Pedro <jpnm1@aluno.ifal.edu.br>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
pypdf2 = "^2.11.1"
python-multipart = "^0.0.5"
python-dotenv = "^0.21.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
